problem with catalog pull functions